2006-05-13 Jim Garlick <garlick@speakeasy.net>

  * man/hp3488.1: New.

  * man/Makefile: added hp3488.1

  * src/hp3488.[ch]: better error reporting, better slot config listing,
  added --selftest option.

2006-05-12 Jim Garlick <garlick@speakeasy.net>

  * src/hp3488.[ch]: New.

  * src/Makefile: hp3488 support

  * examples/gpib.conf: includes hp3488 entry. 

2006-02-28 Jim Garlick <garlick@speakeasy.net>

  * src/hp1630.c: drop \r\n in model comparison

  * : tag gpib-utils-1-2

2006-02-26 Jim Garlick <garlick@speakeasy.net>

  * src/Makefile: fix link line for r5005.

  * src/hp1630.c: workaround for possible HP1630D firmware bug [Adam Goldman].

  * src/gpib.c: comment out ibrd() EOI assertion and remove short read and 
  write handling which probably can't happen.

2006-02-17 Jim Garlick <garlick@speakeasy.net>

  * gpib-utils.spec: Update for Fedora packaging guidelines.

2006-02-13 Jim Garlick <garlick@speakeasy.net>

  * src/hpcrc.[ch]: New. CRC algorithm for hp1630. [Adam Goldman]

  * src/gpib.c: in gpib_ibrd(), remove EOI assertion, continue reading until 
    EOI or zero ibcnt.

  * src/gpib.c: in gpib_ibwrt(), continue on a short read.

  * src/hp1630.c: verify CRC on save/restore of learn strings.

  * src/hptodino.c: verify CRC on read of learn string.

2006-02-09 Jim Garlick <garlick@speakeasy.net>

  * src/util.[ch]: New.

  * src/hp1630.c: Use read_all(), write_all() instead of getchar(), fread(),
    and fwrite() for save/restore/print.

  * src/hp1630.c: Cleanup save/restore functions.  
    - Check learn string length.  
    - Restore learn strings to the analyzer individually, checking
      status byte 4 on each restore.  
    - Display learn string cmd+lengths on save.

  * src/gpib.c: in gpib_ibrd(), assert that EOI is set.

2006-02-08 Jim Garlick <garlick@speakeasy.net>

  * src/hp1630.c: Add clear entry before date set [Adam Goldman]

2005-12-09 Jim Garlick <garlick@speakeasy.net>

  * src/*h: some gratuitous reformatting of text.
